[gd_scene load_steps=11 format=3 uid="uid://bcs7c522ihgsf"]

[ext_resource type="Texture2D" uid="uid://cgx0wqxo2m12y" path="res://assets/title.png" id="1_i665m"]
[ext_resource type="Script" path="res://scripts/scenes/main_menu/game_title.gd" id="2_7hyao"]
[ext_resource type="PackedScene" uid="uid://bvj431e37jkc0" path="res://scenes/game/ball.tscn" id="3_1tn13"]

[sub_resource type="Animation" id="Animation_buhpd"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_3ddme"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_jnpnn"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_0npt7"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_6dmco"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pfsmp"]
_data = {
"collide_bottom": SubResource("Animation_buhpd"),
"collide_left": SubResource("Animation_3ddme"),
"collide_right": SubResource("Animation_jnpnn"),
"collide_top": SubResource("Animation_0npt7"),
"idle": SubResource("Animation_6dmco")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_a5ta5"]
radius = 24.0

[node name="GameTitle" type="Node2D"]
script = ExtResource("2_7hyao")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_i665m")
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_pfsmp")
}

[node name="Walls" type="Node2D" parent="."]
position = Vector2(-108, 12)

[node name="TopWall" type="RigidBody2D" parent="Walls"]
gravity_scale = 0.0
freeze = true
freeze_mode = 1
max_contacts_reported = 1
contact_monitor = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/TopWall"]
polygon = PackedVector2Array(72, -72, 96, -96, -96, -96, -72, -72)

[node name="LeftWall" type="RigidBody2D" parent="Walls"]
gravity_scale = 0.0
freeze = true
freeze_mode = 1
max_contacts_reported = 1
contact_monitor = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/LeftWall"]
polygon = PackedVector2Array(-72, -72, -96, -96, -96, 96, -72, 72)

[node name="BottomWall" type="RigidBody2D" parent="Walls"]
gravity_scale = 0.0
freeze = true
freeze_mode = 1
max_contacts_reported = 1
contact_monitor = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/BottomWall"]
polygon = PackedVector2Array(-72, 72, -96, 96, 96, 96, 72, 72)

[node name="RightWall" type="RigidBody2D" parent="Walls"]
gravity_scale = 0.0
freeze = true
freeze_mode = 1
max_contacts_reported = 1
contact_monitor = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/RightWall"]
polygon = PackedVector2Array(72, 72, 96, 96, 96, -96, 72, -72)

[node name="Ball" parent="." instance=ExtResource("3_1tn13")]
position = Vector2(-108, 12)

[node name="Sprite2D" parent="Ball" index="0"]
scale = Vector2(2, 2)

[node name="CollisionShape2D" parent="Ball" index="1"]
shape = SubResource("CircleShape2D_a5ta5")

[editable path="Ball"]
